--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -41,7 +41,7 @@
             app:layout_constraintBottom_toBottomOf="parent"
             app:layout_constraintStart_toStartOf="parent" />
 
-        <com.yuraiz.ponycorn.FractalView
+        <com.yuraiz.ponycorn.render.FractalView
             android:id="@+id/myGLSurfaceView2"
             android:layout_width="0dp"
             android:layout_height="0dp"
@@ -51,10 +51,6 @@
             app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintTop_toTopOf="parent"
             app:layout_constraintVertical_bias="1.0" />
-
-        <!--        <com.yuraiz.ponycorn.CustomView-->
-<!--            android:layout_width="match_parent"-->
-<!--            android:layout_height="match_parent"/>-->
 
     </androidx.constraintlayout.widget.ConstraintLayout>
 
